# proxmoxer-stubs

./: Makefile  README.md  pyproject.toml  stubgen.py
.github/workflows/: test.yml
apidata/: README  apidata-v6.json  apidata-v7.json  apidata-v8.json  apidata-v9.json  apidata.json
proxmoxer-stubs/: __init__.pyi  core.pyi
proxmoxer-stubs/backends/: __init__.pyi  https.pyi  local.pyi
proxmoxer_types/v6/: core.py
proxmoxer_types/v7/: core.py
proxmoxer_types/v8/: core.py
proxmoxer_types/v9/: core.py
src/stubs/common/backends/: command_base.pyi  openssh.pyi  ssh_paramiko.pyi
src/stubs/common/tools/: __init__.pyi  files.pyi  tasks.pyi
stubgen/: __init__.py  __main__.py
stubgen/patches/: __init__.py  v6.py  v9.py
tests/: stubtest-allowlist  test.py  test_cases.py
